fix wrapping icons on mobile

--- a/src/resources/postcss/tickets-tables.pcss
+++ b/src/resources/postcss/tickets-tables.pcss
@@ -121,6 +121,10 @@
 	.ticket_edit {
 		white-space: nowrap;
 		width: 84px;
+		
+		@media screen and (max-width: 782px) {
+			white-space: normal;
+		}
 	}
 
 	/* Edit button styles - separate for portability */
